--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ categories = ["value-formatting", "command-line-interface", "development-tools"]
 
 license = "LGPL-3.0"
 
+edition = "2018"
+
 [dependencies]
 log = '^0.4'
 env_logger = '0.7'
